--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-youtube": "^8.2.1",
-    "web-vitals": "^2.1.4",
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
