--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movie-trailer-searcher",
   "version": "1.0.0",
+  "homepage": "https://davidgoforth.github.io/movie_trailer_searcher",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
